tests/NormalTests/paczka1/small_fuzzy/54896652.err
Error in line 1: 7Adp0zMIq A212 39,7
Error in line 3: 7Adp0zMIq S452 67,7
Error in line 13: A212 A967 338,07
